--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Get XKCD Comic Data
 Version: 0.1.0
 Author: Robert Myles McDonnell
 Maintainer: Robert Myles McDonnell <robertmylesmcdonnell@gmail.com>
-Description: Download data from individual  xkcd comics.
+Description: Download data from individual xkcd comics, from <https://xkcd.com/>.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
