--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,13 @@
 
 export("%>%")
 export(get_comic)
+export(print_xkcd)
+importFrom(assertthat,assert_that)
+importFrom(dplyr,mutate)
+importFrom(glue,glue)
+importFrom(htmltools,HTML)
+importFrom(htmltools,html_print)
 importFrom(httr,GET)
 importFrom(httr,content)
 importFrom(jsonlite,fromJSON)
 importFrom(magrittr,"%>%")
-importFrom(tibble,as_tibble)
