some doc update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(get_comic)
 export(print_xkcd)
 importFrom(assertthat,assert_that)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,mutate)
 importFrom(glue,glue)
 importFrom(htmltools,HTML)
