--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,8 @@ Imports: httr(>= 1.3.1),
     magrittr (>= 1.5),
     tibble (>= 1.3.4),
     dplyr (>= 0.7.4),
-    jsonlite(>= 1.5),
-    glue,
-    htmltools,
-    assertthat
+    jsonlite (>= 1.5),
+    glue (>= 1.1.1),
+    htmltools (>= 0.3.6),
+    assertthat (>= 0.2.0)
 Suggests: testthat
